syntax = "proto3";
package pb;
option go_package="./pb";

message User {
  string id = 1;
  string name = 2;
  string email = 3;
}

message authToken {
  string token = 1;
}

service AuthService{
  rpc verifyUser (authToken) returns (User);
} 